--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,35 @@ project:
   output-dir: docs
 
 website:
-  title: "notes"
+  sidebar:
+    style: "docked"
+    search: true
+    contents:
+      - text: "Introduction"
+        href: introduction.qmd
+      - section: "Basics"
+        href: basics-summary.qmd
+        contents:
+          - index.qmd
+          - basics-knitr.qmd
+          - basics-jupyter.qmd
+      - section: "Layout"
+        contents:
+          - layout.qmd
+          - layout-knitr.qmd
+          - layout-jupyter.qmd
+      - section: advanced.qmd
+        contents:
+          - raw-code.qmd
+          - custom-theme.qmd
+      - acknowledgment.qmd
+  title: "CCNP ENARSI Notes"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+    
 
 format:
   html:
