--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,11 @@ project:
   output-dir: docs
 
 website:
-  title: "CCNP ENARSI Notes"
+  title: "Kolkrabe"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
   sidebar:
     style: "docked"
     search: true
