--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,9 @@ project:
 website:
   title: "Kolkrabe"
   navbar: false
+    left:
+      - href: index.qmd
+        text: Home
   sidebar:
     style: "docked"
     search: true
