--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ website:
   sidebar:
     style: "docked"
     search: true
+    background: grey
     contents:
       - text: "Welcome"
         href: index.qmd
