--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ website:
             contents:
               - device_management.qmd
               - logging.qmd
+              - dhcp.qmd
               - section: "Layout"
                 contents:
                   - layout.qmd
