--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
         contents:
          - aaa.qmd
          - uRPF.qmd
-         - CoPP.qmd
+         - copp.qmd
       - whitepapers.qmd
 
 format:
