--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,9 @@ website:
               - redistribution.qmd
               - routemap-pbr.qmd
               - vrf.qmd
+          - section: "VPN & Encryption"
+            contents:
+              - mpls.qmd
           - section: "Infrastructure Services"
             contents:
               - device_management.qmd
@@ -29,7 +32,7 @@ website:
               - dhcp.qmd
               - ipsla+track.qmd
               - netflow.qmd
-          - section: Infrastructure Security
+          - section: "Infrastructure Security"
             contents:
              - aaa.qmd
              - uRPF.qmd
