--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,7 @@ website:
               - netflow.qmd
           - section: "Infrastructure Security"
             contents:
+             - acls.qmd
              - aaa.qmd
              - uRPF.qmd
              - copp.qmd
